.ops/manifests/footballsocial_api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: footballsocial-api
  namespace: backend
spec:
  selector:
    matchLabels:
      app: footballsocial-api
  template:
    metadata:
      labels:
        app: footballsocial-api
    spec:
      containers:
        - name: footballsocial-api
          image: samternent/footballsocial-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
