.ops/manifests/ternent-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ternent-api
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ternent-api
  template:
    metadata:
      labels:
        app: ternent-api
    spec:
      containers:
      - name: ternent-api
        image: samternent/ternent-api
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: "0.01"
            memory: 50Mi
          limits:
            cpu: "0.02"
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ternent-api
  namespace: backend
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: ternent-api
