.ops/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-concords-api
  namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
      - api.concords.app
      secretName: letsencrypt-nginx
  rules:
    - host: api.concords.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: concords-api
                port:
                  number: 80
  ingressClassName: nginx
