.ops/manifests/ternent_staging_host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-staging
  namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - staging.ternent.dev
      secretName: letsencrypt-nginx-staging
  rules:
    - host: staging.ternent.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ternent-api
                port:
                  number: 80
  ingressClassName: nginx
